# lucid-component-viz

./: .gitignore  Makefile  README.md  pyproject.toml
docs/superpowers/specs/: 2026-05-01-arena-frame-tree-design.md
src/lucid_component_viz/: component.py
src/lucid_component_viz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/lucid_component_viz/arena/: arena.py  config.py
tests/: conftest.py  test_arena_config.py  test_contract.py
